tests/toy/neg/001127_mutation.toylang
program a = { if int then sleep; } .
